@@ -3,6 +3,7 @@ CHANGELOG
 Beta 0.9.2 01.12.2016
 
 Added the blank generator gem, keybinds to place it and talents for it!
+Changed the method for buying maximum arcana upgrades at once to non-looped
 
 Beta 0.9.1 01.12.2016
 
